--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,21 @@
 <!doctype html>
 <head>
   <meta charset="utf-8">
-  <title>VerizonFrontend</title>
+  <title>The DLM Wiki</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <style>
-      
-      </style>
-      </head>
 </head>
-<body>
-  <app-root>Loading...</app-root>
-</body>
+<html class = "h-100">
+  <body style="background-color: #093A3E" class="text-light h-100">
+    <div class = "container-fluid h-100 mt-1">
+        <app-root>
+            <div class="h-100 d-flex justify-content-center align-items-center">
+              <div class="spinner-border text-white" style="width: 6rem; height: 6rem;" role="status">
+                <span class="sr-only"></span>
+              </div>
+            </div>
+        </app-root>
+    </div>
+  </body>
 </html>
