--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,14 @@
-<!doctype html>
-<head>
-  <meta charset="utf-8">
-  <title>The DLM Wiki</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<!DOCTYPE html>
 <html class = "h-100">
+
+  <head>
+    <meta charset="utf-8">
+    <title>The DLM Wiki</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  </head>
+
   <body style="background-color: #093A3E" class="text-light h-100">
     <div class = "container-fluid h-100 mt-1">
         <app-root>
@@ -17,5 +19,6 @@
             </div>
         </app-root>
     </div>
-  </body>
+   </body>
+   
 </html>
